src/antlr4/varDeclarationParser/grammar/src/varDeclarationParser.cpp

// Generated from varDeclaration.g4 by ANTLR 4.7.2


#include "varDeclarationListener.h"

#include "varDeclarationParser.h"


using namespace antlrcpp;
using namespace antlr4;

varDeclarationParser::varDeclarationParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

varDeclarationParser::~varDeclarationParser() {
  delete _interpreter;
}

std::string varDeclarationParser::getGrammarFileName() const {
  return "varDeclaration.g4";
}

const std::vector<std::string>& varDeclarationParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& varDeclarationParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

varDeclarationParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::CDeclarationContext* varDeclarationParser::FileContext::cDeclaration() {
  return getRuleContext<varDeclarationParser::CDeclarationContext>(0);
}

tree::TerminalNode* varDeclarationParser::FileContext::EOF() {
  return getToken(varDeclarationParser::EOF, 0);
}


size_t varDeclarationParser::FileContext::getRuleIndex() const {
  return varDeclarationParser::RuleFile;
}

void varDeclarationParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void varDeclarationParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

varDeclarationParser::FileContext* varDeclarationParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, varDeclarationParser::RuleFile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    cDeclaration();
    setState(31);
    match(varDeclarationParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CDeclarationContext ------------------------------------------------------------------

varDeclarationParser::CDeclarationContext::CDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::CStatementContext* varDeclarationParser::CDeclarationContext::cStatement() {
  return getRuleContext<varDeclarationParser::CStatementContext>(0);
}

varDeclarationParser::CDeclarationContext* varDeclarationParser::CDeclarationContext::cDeclaration() {
  return getRuleContext<varDeclarationParser::CDeclarationContext>(0);
}


size_t varDeclarationParser::CDeclarationContext::getRuleIndex() const {
  return varDeclarationParser::RuleCDeclaration;
}

void varDeclarationParser::CDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCDeclaration(this);
}

void varDeclarationParser::CDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCDeclaration(this);
}

varDeclarationParser::CDeclarationContext* varDeclarationParser::cDeclaration() {
  CDeclarationContext *_localctx = _tracker.createInstance<CDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, varDeclarationParser::RuleCDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(33);
      cStatement();
      setState(34);
      match(varDeclarationParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(36);
      cStatement();
      setState(37);
      match(varDeclarationParser::T__0);
      setState(38);
      cDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CStatementContext ------------------------------------------------------------------

varDeclarationParser::CStatementContext::CStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::VarDecContext* varDeclarationParser::CStatementContext::varDec() {
  return getRuleContext<varDeclarationParser::VarDecContext>(0);
}

varDeclarationParser::EnumDecContext* varDeclarationParser::CStatementContext::enumDec() {
  return getRuleContext<varDeclarationParser::EnumDecContext>(0);
}


size_t varDeclarationParser::CStatementContext::getRuleIndex() const {
  return varDeclarationParser::RuleCStatement;
}

void varDeclarationParser::CStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCStatement(this);
}

void varDeclarationParser::CStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCStatement(this);
}

varDeclarationParser::CStatementContext* varDeclarationParser::cStatement() {
  CStatementContext *_localctx = _tracker.createInstance<CStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, varDeclarationParser::RuleCStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case varDeclarationParser::VARTYPE:
      case varDeclarationParser::NAME: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        varDec();
        break;
      }

      case varDeclarationParser::TYPEDEF:
      case varDeclarationParser::ENUM: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        enumDec();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDecContext ------------------------------------------------------------------

varDeclarationParser::VarDecContext::VarDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::VartypeContext* varDeclarationParser::VarDecContext::vartype() {
  return getRuleContext<varDeclarationParser::VartypeContext>(0);
}

varDeclarationParser::NameContext* varDeclarationParser::VarDecContext::name() {
  return getRuleContext<varDeclarationParser::NameContext>(0);
}

varDeclarationParser::AssContext* varDeclarationParser::VarDecContext::ass() {
  return getRuleContext<varDeclarationParser::AssContext>(0);
}


size_t varDeclarationParser::VarDecContext::getRuleIndex() const {
  return varDeclarationParser::RuleVarDec;
}

void varDeclarationParser::VarDecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDec(this);
}

void varDeclarationParser::VarDecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDec(this);
}

varDeclarationParser::VarDecContext* varDeclarationParser::varDec() {
  VarDecContext *_localctx = _tracker.createInstance<VarDecContext>(_ctx, getState());
  enterRule(_localctx, 6, varDeclarationParser::RuleVarDec);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    vartype();
    setState(47);
    name();
    setState(49);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == varDeclarationParser::T__1) {
      setState(48);
      ass();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssContext ------------------------------------------------------------------

varDeclarationParser::AssContext::AssContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* varDeclarationParser::AssContext::NAME() {
  return getToken(varDeclarationParser::NAME, 0);
}

tree::TerminalNode* varDeclarationParser::AssContext::NUMERIC() {
  return getToken(varDeclarationParser::NUMERIC, 0);
}


size_t varDeclarationParser::AssContext::getRuleIndex() const {
  return varDeclarationParser::RuleAss;
}

void varDeclarationParser::AssContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAss(this);
}

void varDeclarationParser::AssContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAss(this);
}

varDeclarationParser::AssContext* varDeclarationParser::ass() {
  AssContext *_localctx = _tracker.createInstance<AssContext>(_ctx, getState());
  enterRule(_localctx, 8, varDeclarationParser::RuleAss);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(51);
      match(varDeclarationParser::T__1);
      setState(52);
      match(varDeclarationParser::NAME);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      match(varDeclarationParser::T__1);
      setState(54);
      match(varDeclarationParser::NUMERIC);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumDecContext ------------------------------------------------------------------

varDeclarationParser::EnumDecContext::EnumDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* varDeclarationParser::EnumDecContext::ENUM() {
  return getToken(varDeclarationParser::ENUM, 0);
}

varDeclarationParser::NameContext* varDeclarationParser::EnumDecContext::name() {
  return getRuleContext<varDeclarationParser::NameContext>(0);
}

tree::TerminalNode* varDeclarationParser::EnumDecContext::OB() {
  return getToken(varDeclarationParser::OB, 0);
}

varDeclarationParser::Enum_listContext* varDeclarationParser::EnumDecContext::enum_list() {
  return getRuleContext<varDeclarationParser::Enum_listContext>(0);
}

tree::TerminalNode* varDeclarationParser::EnumDecContext::CB() {
  return getToken(varDeclarationParser::CB, 0);
}

tree::TerminalNode* varDeclarationParser::EnumDecContext::TYPEDEF() {
  return getToken(varDeclarationParser::TYPEDEF, 0);
}


size_t varDeclarationParser::EnumDecContext::getRuleIndex() const {
  return varDeclarationParser::RuleEnumDec;
}

void varDeclarationParser::EnumDecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnumDec(this);
}

void varDeclarationParser::EnumDecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnumDec(this);
}

varDeclarationParser::EnumDecContext* varDeclarationParser::enumDec() {
  EnumDecContext *_localctx = _tracker.createInstance<EnumDecContext>(_ctx, getState());
  enterRule(_localctx, 10, varDeclarationParser::RuleEnumDec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(57);
      match(varDeclarationParser::ENUM);
      setState(58);
      name();
      setState(59);
      match(varDeclarationParser::OB);
      setState(60);
      enum_list();
      setState(61);
      match(varDeclarationParser::CB);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(63);
      match(varDeclarationParser::TYPEDEF);
      setState(64);
      match(varDeclarationParser::ENUM);
      setState(65);
      match(varDeclarationParser::OB);
      setState(66);
      enum_list();
      setState(67);
      match(varDeclarationParser::CB);
      setState(68);
      name();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(70);
      match(varDeclarationParser::ENUM);
      setState(71);
      match(varDeclarationParser::OB);
      setState(72);
      enum_list();
      setState(73);
      match(varDeclarationParser::CB);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_listContext ------------------------------------------------------------------

varDeclarationParser::Enum_listContext::Enum_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::NameContext* varDeclarationParser::Enum_listContext::name() {
  return getRuleContext<varDeclarationParser::NameContext>(0);
}

varDeclarationParser::AddLogicContext* varDeclarationParser::Enum_listContext::addLogic() {
  return getRuleContext<varDeclarationParser::AddLogicContext>(0);
}

varDeclarationParser::Enum_listContext* varDeclarationParser::Enum_listContext::enum_list() {
  return getRuleContext<varDeclarationParser::Enum_listContext>(0);
}


size_t varDeclarationParser::Enum_listContext::getRuleIndex() const {
  return varDeclarationParser::RuleEnum_list;
}

void varDeclarationParser::Enum_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnum_list(this);
}

void varDeclarationParser::Enum_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnum_list(this);
}

varDeclarationParser::Enum_listContext* varDeclarationParser::enum_list() {
  Enum_listContext *_localctx = _tracker.createInstance<Enum_listContext>(_ctx, getState());
  enterRule(_localctx, 12, varDeclarationParser::RuleEnum_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      name();
      setState(80);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == varDeclarationParser::T__1) {
        setState(78);
        match(varDeclarationParser::T__1);
        setState(79);
        addLogic();
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      name();
      setState(85);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == varDeclarationParser::T__1) {
        setState(83);
        match(varDeclarationParser::T__1);
        setState(84);
        addLogic();
      }
      setState(87);
      match(varDeclarationParser::T__2);
      setState(88);
      enum_list();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddLogicContext ------------------------------------------------------------------

varDeclarationParser::AddLogicContext::AddLogicContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::LogicContext* varDeclarationParser::AddLogicContext::logic() {
  return getRuleContext<varDeclarationParser::LogicContext>(0);
}


size_t varDeclarationParser::AddLogicContext::getRuleIndex() const {
  return varDeclarationParser::RuleAddLogic;
}

void varDeclarationParser::AddLogicContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddLogic(this);
}

void varDeclarationParser::AddLogicContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddLogic(this);
}

varDeclarationParser::AddLogicContext* varDeclarationParser::addLogic() {
  AddLogicContext *_localctx = _tracker.createInstance<AddLogicContext>(_ctx, getState());
  enterRule(_localctx, 14, varDeclarationParser::RuleAddLogic);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    logic(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

varDeclarationParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* varDeclarationParser::NameContext::NAME() {
  return getToken(varDeclarationParser::NAME, 0);
}


size_t varDeclarationParser::NameContext::getRuleIndex() const {
  return varDeclarationParser::RuleName;
}

void varDeclarationParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void varDeclarationParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}

varDeclarationParser::NameContext* varDeclarationParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 16, varDeclarationParser::RuleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(varDeclarationParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicNameContext ------------------------------------------------------------------

varDeclarationParser::LogicNameContext::LogicNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* varDeclarationParser::LogicNameContext::NAME() {
  return getToken(varDeclarationParser::NAME, 0);
}


size_t varDeclarationParser::LogicNameContext::getRuleIndex() const {
  return varDeclarationParser::RuleLogicName;
}

void varDeclarationParser::LogicNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicName(this);
}

void varDeclarationParser::LogicNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicName(this);
}

varDeclarationParser::LogicNameContext* varDeclarationParser::logicName() {
  LogicNameContext *_localctx = _tracker.createInstance<LogicNameContext>(_ctx, getState());
  enterRule(_localctx, 18, varDeclarationParser::RuleLogicName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(varDeclarationParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VartypeContext ------------------------------------------------------------------

varDeclarationParser::VartypeContext::VartypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* varDeclarationParser::VartypeContext::VARTYPE() {
  return getToken(varDeclarationParser::VARTYPE, 0);
}

varDeclarationParser::EnumTypeContext* varDeclarationParser::VartypeContext::enumType() {
  return getRuleContext<varDeclarationParser::EnumTypeContext>(0);
}


size_t varDeclarationParser::VartypeContext::getRuleIndex() const {
  return varDeclarationParser::RuleVartype;
}

void varDeclarationParser::VartypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVartype(this);
}

void varDeclarationParser::VartypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVartype(this);
}

varDeclarationParser::VartypeContext* varDeclarationParser::vartype() {
  VartypeContext *_localctx = _tracker.createInstance<VartypeContext>(_ctx, getState());
  enterRule(_localctx, 20, varDeclarationParser::RuleVartype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case varDeclarationParser::VARTYPE: {
        enterOuterAlt(_localctx, 1);
        setState(98);
        match(varDeclarationParser::VARTYPE);
        break;
      }

      case varDeclarationParser::NAME: {
        enterOuterAlt(_localctx, 2);
        setState(99);
        enumType();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumTypeContext ------------------------------------------------------------------

varDeclarationParser::EnumTypeContext::EnumTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::NameContext* varDeclarationParser::EnumTypeContext::name() {
  return getRuleContext<varDeclarationParser::NameContext>(0);
}


size_t varDeclarationParser::EnumTypeContext::getRuleIndex() const {
  return varDeclarationParser::RuleEnumType;
}

void varDeclarationParser::EnumTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnumType(this);
}

void varDeclarationParser::EnumTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<varDeclarationListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnumType(this);
}

varDeclarationParser::EnumTypeContext* varDeclarationParser::enumType() {
  EnumTypeContext *_localctx = _tracker.createInstance<EnumTypeContext>(_ctx, getState());
  enterRule(_localctx, 22, varDeclarationParser::RuleEnumType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    name();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicContext ------------------------------------------------------------------

varDeclarationParser::LogicContext::LogicContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

varDeclarationParser::LogicAtomContext* varDeclarationParser::LogicContext::logicAtom() {
  return getRuleContext<varDeclarationParser::LogicAtomContext>(0);
}

tree::TerminalNode* varDeclarationParser::LogicContext::LSBRACKET() {
  return getToken(varDeclarationParser::LSBRACKET, 0);
}

std::vector<varDeclarationParser::LogicContext *> varDeclarationParser::LogicContext::logic() {
  return getRuleContexts<varDeclarationParser::LogicContext>();
}

varDeclarationParser::LogicContext* varDeclarationParser::LogicContext::logic(size_t i) {
  return getRuleContext<varDeclarationParser::LogicContext>(i);
}

tree::TerminalNode* varDeclarationParser::LogicContext::RSBRACKET() {
  return getToken(varDeclarationParser::RSBRACKET, 0);
}

tree::TerminalNode* varDeclarationParser::LogicContext::TIMES() {
  return getToken(varDeclarationParser::TIMES, 0);
}

tree::TerminalNode* varDeclarationParser::LogicContext::DIV() {
  return getToken(varDeclarationParser::DIV, 0);
}

tree::TerminalNode* varDeclarationParser::LogicContext::PLUS() {
  return getToken(varDeclarationParser::PLUS, 0);
}

tree::TerminalNode* varDeclarationParser::LogicContext::MINUS() {
  return getToken(varDeclarationParser::MINUS, 0);
}


size_t varDeclarationParser::LogicContext::getRuleIndex() const {
  return varDeclarationParser::RuleLogic;
}
